--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "mysql2": "^3.6.5",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
